cmake_minimum_required(VERSION 3.23)
project(Chapitre_07)

set(CMAKE_CXX_STANDARD 20)

add_subdirectory(Exo_7_01)
add_subdirectory(Exo_7_02)
add_subdirectory(Exo_7_03a)
add_subdirectory(Exo_7_03b)
add_subdirectory(Exo_7_05)
add_subdirectory(Exo_7_06)
add_subdirectory(Exo_7_10a)
add_subdirectory(Exo_7_10b)
add_subdirectory(Exo_refactor)
